# ha-api-mcp

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: ci.yml  release.yml
docs/: README.md
examples/: basic_server.py
src/ha_api_mcp/: __init__.py  catalog.py  models.py  proxy.py  schema.py  server.py  validation.py
tests/: conftest.py
tests/quality/: test_api_docstrings.py  test_no_unused_exports.py
tests/unit/: test_catalog.py  test_models.py  test_proxy.py  test_schema.py  test_server.py  test_validation.py
