[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-api-mcp"
version = "0.1.0"
description = "Reusable MCP core for Home Assistant API integration."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
  { name = "Badalyan Vyacheslav" },
]
dependencies = [
  "aiohttp>=3.10.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/slavonnet/ha-api-mcp"
Repository = "https://github.com/slavonnet/ha-api-mcp"
Issues = "https://github.com/slavonnet/ha-api-mcp/issues"

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
  "tests",
]
addopts = "--cov=src --cov-branch --cov-report=term-missing --cov-fail-under=100"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "A", "RUF"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "ha_api_mcp",
  "ha_api_mcp.*",
]
ignore_missing_imports = true
